# birdwatcher-rs

./: .gitignore  Cargo.toml  README.md  birdwatcher-rs-module.nix  flake.nix  integration_test.nix  rust-toolchain.toml
birdwatcher_rs/: Cargo.toml
birdwatcher_rs/src/: daemon_clap_command.rs  lib.rs  telemetry.rs
birdwatcher_rs/src/deser/: duration_deser_f32.rs
birdwatcher_rs/src/rpc/: common.rs  server.rs
example/: birdwatcher.conf  birdwatcher_random.conf
integration_test/: multiple_service.nix  single_service.nix  single_service.py
src/: config.rs  lib.rs  main.rs  service.rs  telemetry.rs
src/deser/: duration_deser_f32.rs  mod.rs  non_neg_f32.rs
src/rpc/: common.rs  mod.rs  server.rs
src/tui/: table.rs
test_tools/: compose.yaml  config.alloy  docker-compose.yml  loki.yaml  tempo.yaml
test_tools/dashboards/: birdwatcher_dashboard.json
test_tools/grafana/dashboards/: birdwatcher_dashboard.json
test_tools/provisioning/datasources/: ds.yaml
xtask/: Cargo.toml
xtask/src/: main.rs
