[package]
name = "birdwatcher-rs"
version = "0.1.0"
edition = "2021"
description = "Run periodic healthcheck on a service to automatically stop or start [BIRD](https://bird.network.cz/) advertisements."
authors = ["Julien Gautier"]
license = "MIT OR Apache-2.0"


[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
clap = { version = "4.5.33", features = ["derive"] }
fs-err = "3.1.0"
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
tarpc = { version = "0.36.0", features = ["full"] }
futures = "0.3"
tokio = { version = "1", features = [
  "process",
  "rt",
  "time",
  "sync",
  "macros",
  "rt-multi-thread",
] }
toml = "0.8.20"
color-eyre = "0.6.4"
ratatui = "0.29.0"
unicode-width = "0.2.0"
futures-timer = "3.0.3"

opentelemetry-otlp = { version = "0.30.0", default-features = false, features = [
  "metrics",
  "logs",
  "trace",
  "grpc-tonic",
] }
opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-appender-tracing = "0.30.0"
tracing = { version = "0.1.41", features = ["log-always"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
indoc = "2"

[lints.clippy]
pedantic = "forbid"
